add String Search feature

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <img src="ressources/logo.png" alt="" class="logo" />
-    <div class="input-group mb-3 searchbar">
+    <div class="input-group searchbar">
         <input type="text" class="form-control searchbar__input" placeholder="Rechercher un ingrédient, appareil, ustensile ou recette">
         <button class="btn searchbar__button" type="button" id="button-addon2"><i class="fas fa-search"></i></button>
     </div>
@@ -26,6 +26,8 @@
     <section class="gallery">
 
     </section>
+    <!-- <script src="ressources/data/recipes.js"></script>!-->
+    <script type="module" src="ressources/scripts/homepage.js"></script>
 </body>
 
 </html>
