--- a/index.html
+++ b/index.html
@@ -19,15 +19,36 @@
         <input type="text" class="form-control searchbar__input" placeholder="Rechercher un ingrédient, appareil, ustensile ou recette">
         <button class="btn searchbar__button" type="button" id="button-addon2"><i class="fas fa-search"></i></button>
     </div>
+    <section class="filter-section">
+        <div class="filter filter--blue" id="Ingredients">
+            <input class="filter--blue" placeholder="Ingredients" id="ingredientInput" />
+            <button class="filter--blue"><i class="fas fa-chevron-down"></i></i></button>
+            <div class="dropdown" id="dropdownBlue">
 
-    <div class="badgeContainer">
+            </div>
+        </div>
+        <div class="filter filter--green" id="Appareil">
+            <input class="filter--green" placeholder="Appareil" id="appareilInput" />
+            <button class="filter--green"><i class="fas fa-chevron-down"></i></i></button>
+            <div class="dropdown" id="dropdownGreen">
 
-    </div>
+            </div>
+        </div>
+        <div class="filter filter--orange" id="Ustensils">
+            <input class="filter--orange" placeholder="Ustensiles" id="ustensilInput" />
+            <button class="filter--orange"><i class="fas fa-chevron-down"></i></i></button>
+            <div class="dropdown" id="dropdownOrange">
+
+            </div>
+        </div>
+    </section>
+
     <section class="gallery">
 
     </section>
     <!-- <script src="ressources/data/recipes.js"></script>!-->
     <script type="module" src="ressources/scripts/homepage.js"></script>
+    <script type="module" src="ressources/scripts/filter.js"></script>
 </body>
 
 </html>
