extract dropdown container

--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
         <input type="text" class="form-control searchbar__input" placeholder="Rechercher un ingrédient, appareil, ustensile ou recette">
         <button class="btn searchbar__button" type="button" id="button-addon2"><i class="fas fa-search"></i></button>
     </div>
+    <section class="badgeContainer">
+    </section>
+    </div>
     <section class="filter-section">
         <div class="filter filter--blue" id="Ingredients">
             <input class="filter--blue" placeholder="Ingredients" id="ingredientInput" />
             <button class="filter--blue"><i class="fas fa-chevron-down"></i></i></button>
             <div class="dropdown" id="dropdownBlue">
-
             </div>
         </div>
         <div class="filter filter--green" id="Appareil">
@@ -46,9 +48,7 @@
     <section class="gallery">
 
     </section>
-    <!-- <script src="ressources/data/recipes.js"></script>!-->
     <script type="module" src="ressources/scripts/homepage.js"></script>
-    <script type="module" src="ressources/scripts/filter.js"></script>
 </body>
 
 </html>
