--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <input type="text" class="form-control searchbar__input" placeholder="Rechercher un ingrédient, appareil, ustensile ou recette">
         <button class="btn searchbar__button" type="button" id="button-addon2"><i class="fas fa-search"></i></button>
     </div>
+    <section class="badgeContainer">
+    </section>
     <section class="filter-section">
         <div class="filter filter--blue" id="Ingredients">
             <input class="filter--blue" placeholder="Ingredients" id="ingredientInput" />
