--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
     <section class="filter-section">
         <div class="filter filter--blue" id="Ingredients">
             <input class="filter--blue" placeholder="Ingredients" id="ingredientInput" />
-            <button class="filter--blue"><i class="fas fa-chevron-down"></i></i></button>
+            <button class="filter--blue"><i class="fas fa-chevron-down"></i></button>
             <div class="dropdown" id="dropdownBlue">
 
             </div>
         </div>
         <div class="filter filter--green" id="Appareil">
             <input class="filter--green" placeholder="Appareil" id="appareilInput" />
-            <button class="filter--green"><i class="fas fa-chevron-down"></i></i></button>
+            <button class="filter--green"><i class="fas fa-chevron-down"></i></button>
             <div class="dropdown" id="dropdownGreen">
 
             </div>
         </div>
         <div class="filter filter--orange" id="Ustensils">
             <input class="filter--orange" placeholder="Ustensiles" id="ustensilInput" />
-            <button class="filter--orange"><i class="fas fa-chevron-down"></i></i></button>
+            <button class="filter--orange"><i class="fas fa-chevron-down"></i></button>
             <div class="dropdown" id="dropdownOrange">
 
             </div>
